working on main page

--- a/index.html
+++ b/index.html
@@ -54,16 +54,6 @@
 
 		<!--CONTENT-->
 		<div class="container" id="content">
-
-        <!--TYPEWRITER-->
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="typewriter" id="landing-content">
-						<h1>I'm a full stack developer now.</h1>
-					</div>
-				</div>
-			</div>
-		
 			<div class="row cards-content">
 
 				<!-- Card deck -->
@@ -84,15 +74,15 @@
 						<!--Card content-->
 						<div class="card-body landing-content">
 							<!--Title-->
-							<h4 class="card-title">I am a challenger with various experiences.</h4><br>
+							<h4 class="card-title"> Full stack developer</h4><br>
 							<!--Text-->
 
-							<p class="card-text"> Before being bitten by the programming bug I had been
+							<p class="card-text">... and challenger with various experiences. <br><br>Before being bitten by the programming bug I had been
 										working within IT with requirements developing one of charts, maps & flight
-										planners in distributed awesome team for an large aviation company. Click:<a href="https://ww2.jeppesen.com/"
+										planners in distributed awesome team for an large aviation company. Click: <a href="https://ww2.jeppesen.com/"
 									target="_blank"><i class="fas fa-plane"></i></a>
-								<br><br>Experience in Human Resources gave me wide business perspective on how valuable is to get not only highly skilled but also suitably matched employees for an organization.<a
-									href="https://cpljobs.com/pl/?lang=en"
+								<br><br>Experience in Human Resources gave me wide business perspective on how valuable is to get not only highly skilled but also suitably matched employees for an organization. Click :
+								<a href="https://cpljobs.com/pl/?lang=en"
 									target="_blank"><i class="fas fa-user-friends"></i></a><br><br>
                                             Working in TV News Media was an exciting experience. I thrived coordinating TV crews as well as verifying and passing huge amount of information under time pressure. I believe effective communication is a key success to every project. Click:
 								<a href="https://tvn24.pl/" target="_blank"><i class="fas fa-tv"></i></a>
@@ -249,6 +239,32 @@
 									<div><a href="https://www.scaledagileframework.com/"
 											class="btn btn-outline-secondary" target="_blank">Official website</a>
 									</div>
+									<!-- Button trigger modal -->
+									<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+  Launch static backdrop modal
+</button>
+
+									<!-- Modal -->
+									<div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1"
+										role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+												</div>
+												<div class="modal-body">
+													...
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+													<button type="button" class="btn btn-primary">Understood</button>
+												</div>
+											</div>
+										</div>
+									</div>
 							</div>
 						</div>
 					</div>
@@ -297,18 +313,18 @@
 				<!--CONTACT FORM-->
 				<section class="contact" id="contact">
 					<div class="container">
-						<div class="row">
-							<!-- <div class="col-sm-12">
-							</div> -->
-							<!-- <div class="col-md-6"> -->
+						<div class="row justify-content-center">
+							<div class="col-sm-12">
+							</div>
+							<div class="col-md-6">
 
-							<!--GOOGLE MAP-->
-							<!-- <div style="width: 500px"><iframe width="500" height="300"
+								<!--GOOGLE MAP-->
+								<div style="width: 500px"><iframe width="500" height="300"
 										src="https://maps.google.com/maps?width=500&amp;height=300&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
 										frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a
 											href="https://www.maps.ie/coordinates.html">find my coordinates</a></iframe>
-								</div><br/> -->
-							<!-- <div class="email list-styled">
+								</div><br/>
+								<div class="email list-styled">
 									<h5><i class="fas fa-at"></i> Email</h5>
 									<ul class="list-unstyled">
 										<li>anna.janiak@yahoo.pl</li>
@@ -320,11 +336,12 @@
 										<li> +46 793360854</li>
 									</ul>
 								</div>
-							</div> -->
+							</div>
 
 							<div class="col-md-8">
 								<div class="form-box">
 									<h1>Get in touch</h1>
+									<p>Drop me a message</p>
 									<hr>
 									<div class="social">
 										<ul class="list-inline list-unstyled">
@@ -367,34 +384,33 @@
 						</div>
 					</div>
 				</section>
+
 			</div>
 
-			<!--FOOTER-->
-			<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-				<div class="container-fluid text-center">
-					<span class="download">
+
+
+		</div>
+		<!--FOOTER-->
+		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+			<div class="container-fluid text-center">
+				<span class="download">
             <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
 							<i class="fas fa-download"></i></a></small><br>
                             </span>
-					<span class="copy-right">
+				<span class="copy-right">
 				<small>Copyright &copy; Anna Janiak</small>
                 </span>
-				</div>
-			</footer>
-
-			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-				integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-				crossorigin="anonymous">
-			</script>
-			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-				integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-				crossorigin="anonymous">
-			</script>
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-				integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-				crossorigin="anonymous">
-			</script>
-		</div>
+			</div>
+		</footer>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
 </body>
 
 </html>
