--- a/index.html
+++ b/index.html
@@ -52,114 +52,130 @@
 	<!--SCROLL SPY-->
 	<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
 
+
 		<!--CONTENT-->
-		<div class="container" id="content">
-			<div class="row cards-content">
-
-				<!-- Card deck -->
-				<div class="card-deck ">
-
-					<!-- Card 1-->
-					<div class="card card-content-top mb-4">
-
-						<!--Card content/image only-->
-						<div class="card-body landing-image">
-
-						</div>
+		<div class="container content">
+			<div class="row">
+				<div class="col-sm-12 landing-image image"></div>
+			</div>
+			<!--TYPEWRITER-->
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="typewriter" id="landing-content">
+						<h1>I'm a full stack developer.</h1>
 					</div>
-					<!-- /Card 1-->
+				</div>
+			</div>
+			<!--CONTENT-->
 
-					<!-- Card 2-->
+			<div class="row cards-content">
+				<!-- Card 1-->
+				<div class="col-sm-4">
 					<div class="card card-content-top mb-4">
 						<!--Card content-->
 						<div class="card-body landing-content">
-							<!--Title-->
-							<h4 class="card-title"> Full stack developer</h4><br>
-							<!--Text-->
-
-							<p class="card-text">... and challenger with various experiences. <br><br>Before being bitten by the programming bug I had been
-										working within IT with requirements developing one of charts, maps & flight
-										planners in distributed awesome team for an large aviation company. Click: <a href="https://ww2.jeppesen.com/"
-									target="_blank"><i class="fas fa-plane"></i></a>
-								<br><br>Experience in Human Resources gave me wide business perspective on how valuable is to get not only highly skilled but also suitably matched employees for an organization. Click :
+							<p class="card-text">Before being bitten by the programming bug I had been
+								working within IT with requirements developing one of charts, maps & flight
+								planners in distributed awesome team for an large aviation company. Click: <a
+									href="https://ww2.jeppesen.com/" target="_blank"><i class="fas fa-plane"></i></a>
+							</p>
+						</div>
+					</div>
+					<!-- /Card 2-->
+				</div>
+				<div class="col-sm-4">
+					<div class="card card-content-top mb-4">
+						<!--Card content-->
+						<div class="card-body landing-content">
+							<p class="card-text">Experience in Human Resources gave me wide business perspective on how
+								valuable is to get not only highly skilled but also suitably matched employees for an
+								organization. Click:
 								<a href="https://cpljobs.com/pl/?lang=en"
 									target="_blank"><i class="fas fa-user-friends"></i></a><br><br>
-                                            Working in TV News Media was an exciting experience. I thrived coordinating TV crews as well as verifying and passing huge amount of information under time pressure. I believe effective communication is a key success to every project. Click:
+							</p>
+						</div>
+					</div>
+					<!-- /Card 3-->
+				</div>
+				<div class="col-sm-4">
+					<div class="card card-content-top mb-4">
+						<!--Card content-->
+						<div class="card-body landing-content">
+							<p class="card-text">TV News Media was an exciting experience. I thrived
+								coordinating TV crews as well as verifying and passing huge amount of information under
+								time pressure. I believe effective communication is a key success to every project.
+								Click:
 								<a href="https://tvn24.pl/" target="_blank"><i class="fas fa-tv"></i></a>
 							</p>
 						</div>
 					</div>
 					<!-- /Card 2-->
 				</div>
+			</div>
+			<!--container /div-->
+		</div>
+
+
+
+
+
+
+		<!--TECH CONTAINER-->
+		<!--CARDS-->
+		<div class="container" id="tech">
+			<div class="row cards-tech">
+				<!-- Card deck -->
+				<div class="card-deck">
+					<div class="col-sm-6">
+						<!-- Card 1-->
+						<div class="card mb-4">
+
+							<!--Card content-->
+							<div class="card-body">
+								<!--Title-->
+								<h4 class="card-title">FRONT END & TESTING</h4>
+								<!--Text-->
+								<p class="card-text">I am creative.<br>
+									<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.<br>I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
+									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
+									<a href="https://www.istqb.org/" class="btn btn-outline-secondary"
+										target="_blank">ISTQB</a>
+									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+									<!--<button type="button" class="btn btn-outline-secondary">Read more</button>-->
+							</div>
+							<!--Card image-->
+							<div class="view overlay">
+								<div class="card-img-top tech-image image"></div>
+							</div>
+						</div>
+						<!-- /Card 1-->
+					</div>
+
+					<!-- Card 2-->
+					<div class="col-sm-6">
+						<div class="card mb-4">
+							<!--Card image-->
+							<div class="view overlay">
+								<div class="card-img-top backend-image image"></div>
+							</div>
+							<!--Card content-->
+							<div class="card-body">
+								<!--Title-->
+								<h4 class="card-title">BACK END & REQUIREMENTS</h4>
+								<!--Text-->
+								<p class="card-text">I am persistent.<br>
+									<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
+									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
+									<a href="https://www.ireb.org/en" class="btn btn-outline-secondary"
+										target="_blank">IREB</a>
+							</div>
+						</div>
+					</div>
+					<!-- /Card 2-->
+				</div>
 				<!-- /Card deck -->
 			</div>
-
-			<!--TYPEWRITER-->
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="typewriter" id="landing-content">
-						<h1>I'm a full stack developer now.</h1>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!--TECH CONTAINER-->
-	<!--CARDS-->
-	<div class="container" id="tech">
-		<div class="row cards-tech">
-			<!-- Card deck -->
-			<div class="card-deck">
-				<div class="col-sm-6">
-					<!-- Card 1-->
-					<div class="card mb-4">
-
-						<!--Card content-->
-						<div class="card-body">
-							<!--Title-->
-							<h4 class="card-title">FRONT END & TESTING</h4>
-							<!--Text-->
-							<p class="card-text">I am creative.<br>
-								<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.<br>I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
-								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
-								<a href="https://www.istqb.org/" class="btn btn-outline-secondary"
-									target="_blank">ISTQB</a>
-								<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-								<!--<button type="button" class="btn btn-outline-secondary">Read more</button>-->
-						</div>
-						<!--Card image-->
-						<div class="view overlay">
-							<div class="card-img-top tech-image image"></div>
-						</div>
-					</div>
-					<!-- /Card 1-->
-				</div>
-
-				<!-- Card 2-->
-				<div class="col-sm-6">
-					<div class="card mb-4">
-						<!--Card image-->
-						<div class="view overlay">
-							<div class="card-img-top backend-image image"></div>
-						</div>
-						<!--Card content-->
-						<div class="card-body">
-							<!--Title-->
-							<h4 class="card-title">BACK END & REQUIREMENTS</h4>
-							<!--Text-->
-							<p class="card-text">I am persistent.<br>
-								<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
-								<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-								<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
-								<a href="https://www.ireb.org/en" class="btn btn-outline-secondary"
-									target="_blank">IREB</a>
-						</div>
-					</div>
-				</div>
-				<!-- /Card 2-->
-			</div>
-			<!-- /Card deck -->
 		</div>
 
 		<!--PROGRESS SKILLS TECH-->
@@ -250,7 +266,8 @@
 										<div class="modal-dialog" role="document">
 											<div class="modal-content">
 												<div class="modal-header">
-													<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+													<h5 class="modal-title" id="staticBackdropLabel">Modal title
+													</h5>
 													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -272,145 +289,143 @@
 				</div>
 				<!-- /Card deck -->
 			</div>
-
-			<!-- SKILL BAR AGILE -->
-			<div class="wrapper">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="skillbar" data-percent="80%">
-								<div class="skillbar-title">SCRUM</div>
-								<div class="skill-bar-percent">80%</div>
-								<div class="skillbar-bar" style="width: 80%;"></div>
-							</div>
-
-							<div class="skillbar" data-percent="80%">
-								<div class="skillbar-title">KANBAN</div>
-								<div class="skill-bar-percent">80%</div>
-								<div class="skillbar-bar" style="width: 80%;"></div>
-							</div>
-
-							<div class="skillbar" data-percent="70%">
-								<div class="skillbar-title">SAFe</div>
-								<div class="skill-bar-percent">70%</div>
-								<div class="skillbar-bar" style="width: 70%;"></div>
-							</div>
-
+		</div>
+		<!-- SKILL BAR AGILE -->
+		<div class="wrapper">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="skillbar" data-percent="80%">
+							<div class="skillbar-title">SCRUM</div>
+							<div class="skill-bar-percent">80%</div>
+							<div class="skillbar-bar" style="width: 80%;"></div>
 						</div>
+
+						<div class="skillbar" data-percent="80%">
+							<div class="skillbar-title">KANBAN</div>
+							<div class="skill-bar-percent">80%</div>
+							<div class="skillbar-bar" style="width: 80%;"></div>
+						</div>
+
+						<div class="skillbar" data-percent="70%">
+							<div class="skillbar-title">SAFe</div>
+							<div class="skill-bar-percent">70%</div>
+							<div class="skillbar-bar" style="width: 70%;"></div>
+						</div>
+
 					</div>
 				</div>
 			</div>
+		</div>
 
-			<!--CONTACT PAGE-->
-			<!--CONTACT IMAGE-->
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-sm-12">
-						<div class="contact-image image"></div>
-					</div>
+		<!--CONTACT PAGE-->
+		<!--CONTACT IMAGE-->
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="contact-image image"></div>
 				</div>
+			</div>
 
-				<!--CONTACT FORM-->
-				<section class="contact" id="contact">
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-sm-12">
+			<!--CONTACT FORM-->
+			<section class="contact" id="contact">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-md-6">
+							<!--GOOGLE MAP-->
+							<div class="contact-map" style="width: 500px"><iframe width="500" height="300"
+									src="https://maps.google.com/maps?width=500&amp;height=300&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
+									frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a
+										href="https://www.maps.ie/coordinates.html">find my
+										coordinates</a></iframe>
+							</div><br/>
+							<div class="email list-styled">
+								<h5><i class="fas fa-at"></i> Email</h5>
+								<ul class="list-unstyled">
+									<li>anna.janiak@yahoo.pl</li>
+								</ul>
 							</div>
-							<div class="col-md-6">
-
-								<!--GOOGLE MAP-->
-								<div style="width: 500px"><iframe width="500" height="300"
-										src="https://maps.google.com/maps?width=500&amp;height=300&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
-										frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a
-											href="https://www.maps.ie/coordinates.html">find my coordinates</a></iframe>
-								</div><br/>
-								<div class="email list-styled">
-									<h5><i class="fas fa-at"></i> Email</h5>
-									<ul class="list-unstyled">
-										<li>anna.janiak@yahoo.pl</li>
+							<div class="phone list-styled">
+								<h5><i class="fas fa-phone-volume"></i> Phone</h5>
+								<ul class="list-unstyled">
+									<li> +46 793360854</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="form-box">
+								<h1>Get in touch</h1>
+								<p>Drop me a message</p>
+								<hr>
+								<div class="social">
+									<ul class="list-inline list-unstyled">
+										<li class="list-inline-item">
+											<a href="https://www.linkedin.com/in/anna-j-605a40177/"
+												target="_blank"><i class="fab fa-linkedin-in"></i>
+											</a>
+										</li>
+										<li class="list-inline-item">
+											<a href="https://github.com/annaweronica?tab=repositories"
+												target="_blank"><i class="fab fa-github"></i>
+											</a>
+										</li>
+										<li class="list-inline-item">
+											<a href="https://www.meetup.com/members/276920213/"
+												target="_blank"><i class="fab fa-meetup"></i>
+											</a>
+										</li>
 									</ul>
 								</div>
-								<div class="phone list-styled">
-									<h5><i class="fas fa-phone-volume"></i> Phone</h5>
-									<ul class="list-unstyled">
-										<li> +46 793360854</li>
-									</ul>
-								</div>
-							</div>
-
-							<div class="col-md-8">
-								<div class="form-box">
-									<h1>Get in touch</h1>
-									<p>Drop me a message</p>
-									<hr>
-									<div class="social">
-										<ul class="list-inline list-unstyled">
-											<li class="list-inline-item">
-												<a href="https://www.linkedin.com/in/anna-j-605a40177/"
-													target="_blank"><i class="fab fa-linkedin-in"></i>
-												</a>
-											</li>
-											<li class="list-inline-item">
-												<a href="https://github.com/annaweronica?tab=repositories"
-													target="_blank"><i class="fab fa-github"></i>
-												</a>
-											</li>
-											<li class="list-inline-item">
-												<a href="https://www.meetup.com/members/276920213/"
-													target="_blank"><i class="fab fa-meetup"></i>
-												</a>
-											</li>
-										</ul>
-									</div>
-									<hr>
-									<form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
+								<hr>
+								<form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
+									<div class="form-group">
+										<label for="name">Name</label>
+										<input class="form-control" id="name" type="text" name="Name" required="required">
+    </div>
 										<div class="form-group">
-											<label for="name">Name</label>
-											<input class="form-control" id="name" type="text" name="Name" required="required">
+											<label for="email">Email</label>
+											<input class="form-control" id="email" type="email" name="Email" required="required">
     </div>
 											<div class="form-group">
-												<label for="email">Email</label>
-												<input class="form-control" id="email" type="email" name="Email" required="required">
+												<label for="message">Message</label>
+												<textarea class="form-control" id="message" name="Message"></textarea>
+											</div>
+											<input class="btn btn-outline-secondary" type="submit" value="Submit" required="required"/>
     </div>
-												<div class="form-group">
-													<label for="message">Message</label>
-													<textarea class="form-control" id="message" name="Message"></textarea>
-												</div>
-												<input class="btn btn-outline-secondary" type="submit" value="Submit" required="required"/>
-    </div>
-									</form>
-								</div>
+								</form>
 							</div>
 						</div>
 					</div>
-				</section>
-
-			</div>
-
-
+				</div>
+			</section>
 
 		</div>
-		<!--FOOTER-->
-		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-			<div class="container-fluid text-center">
-				<span class="download">
+
+
+
+	</div>
+	<!--FOOTER-->
+	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+		<div class="container-fluid text-center">
+			<span class="download">
             <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
 							<i class="fas fa-download"></i></a></small><br>
                             </span>
-				<span class="copy-right">
+			<span class="copy-right">
 				<small>Copyright &copy; Anna Janiak</small>
                 </span>
-			</div>
-		</footer>
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-		</script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-		</script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-		</script>
+		</div>
+	</footer>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
