--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#agile">Agile</a>
 					</li>
-					<!-- <li class="nav-item">
-						<a class="nav-link" href="#softskills">Soft Skills</a>
-					</li> -->
 					<li class="nav-item">
 						<a class="nav-link" href="#contact">Contact</a>
 					</li>
@@ -47,11 +44,8 @@
 			</div>
 		</nav>
 	</header>
-	<!--<div data-spy="scroll" data-target="#test-navbar" data-offset="0">-->
-
 	<!--SCROLL SPY-->
 	<div data-spy="scroll" data-target="#test-navbar" data-offset="0">
-
 
 		<!--CONTENT-->
 		<div class="container content">
@@ -115,11 +109,6 @@
 			<!--container /div-->
 		</div>
 
-
-
-
-
-
 		<!--TECH CONTAINER-->
 		<!--CARDS-->
 		<div class="container" id="tech">
@@ -129,7 +118,6 @@
 					<div class="col-sm-6">
 						<!-- Card 1-->
 						<div class="card mb-4">
-
 							<!--Card content-->
 							<div class="card-body">
 								<!--Title-->
@@ -235,6 +223,31 @@
 									<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?</p>
 									<div><a href="https://www.scrum.org/" class="btn btn-outline-secondary"
 											target="_blank">Official website</a>
+										<!-- Button trigger modal -->
+										<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#staticBackdrop">Video</button>
+
+										<!-- Modal -->
+										<div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1"
+											role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+											<div class="modal-dialog" role="document">
+												<div class="modal-content">
+													<div class="modal-header">
+														<h5 class="modal-title" id="staticBackdropLabel">Acceptance
+															crieria versus Definition of Done</h5>
+														<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                       </button>
+													</div>
+													<div class="modal-body">
+														<iframe width="420" height="345"
+															src="https://youtu.be/ZxXL_sP-sqQ"></iframe>
+													</div>
+													<div class="modal-footer">
+														<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+													</div>
+												</div>
+											</div>
+										</div>
 									</div>
 							</div>
 						</div>
@@ -254,30 +267,29 @@
 									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
 									<div><a href="https://www.scaledagileframework.com/"
 											class="btn btn-outline-secondary" target="_blank">Official website</a>
-									</div>
-									<!-- Button trigger modal -->
-									<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-  Launch static backdrop modal
-</button>
 
-									<!-- Modal -->
-									<div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1"
-										role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-										<div class="modal-dialog" role="document">
-											<div class="modal-content">
-												<div class="modal-header">
-													<h5 class="modal-title" id="staticBackdropLabel">Modal title
-													</h5>
-													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-												</div>
-												<div class="modal-body">
-													...
-												</div>
-												<div class="modal-footer">
-													<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-													<button type="button" class="btn btn-primary">Understood</button>
+										<!-- Button trigger modal -->
+										<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#staticBackdrop">Video</button>
+
+										<!-- Modal -->
+										<div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1"
+											role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+											<div class="modal-dialog" role="document">
+												<div class="modal-content">
+													<div class="modal-header">
+														<h5 class="modal-title" id="staticBackdropLabel">SAFe 5.0
+															overview
+														</h5>
+														<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                                                             </button>
+													</div>
+													<div class="modal-body">
+														<iframe width="420" height="345"
+															src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+													</div>
+													<div class="modal-footer">
+														<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -300,13 +312,11 @@
 							<div class="skill-bar-percent">80%</div>
 							<div class="skillbar-bar" style="width: 80%;"></div>
 						</div>
-
 						<div class="skillbar" data-percent="80%">
 							<div class="skillbar-title">KANBAN</div>
 							<div class="skill-bar-percent">80%</div>
 							<div class="skillbar-bar" style="width: 80%;"></div>
 						</div>
-
 						<div class="skillbar" data-percent="70%">
 							<div class="skillbar-title">SAFe</div>
 							<div class="skill-bar-percent">70%</div>
@@ -320,7 +330,7 @@
 
 		<!--CONTACT PAGE-->
 		<!--CONTACT IMAGE-->
-		<div class="container-fluid">
+		<div class="container-fluid" id="contact">
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="contact-image image"></div>
@@ -328,54 +338,29 @@
 			</div>
 
 			<!--CONTACT FORM-->
-			<section class="contact" id="contact">
+			<section class="contact">
 				<div class="container">
 					<div class="row justify-content-center">
-						<div class="col-md-6">
-							<!--GOOGLE MAP-->
-							<div class="contact-map" style="width: 500px"><iframe width="500" height="300"
+						<!-- <div class="col-md-6"> -->
+						<!--GOOGLE MAP-->
+						<!-- <div class="contact-map" style="width: 500px"><iframe width="500" height="300"
 									src="https://maps.google.com/maps?width=500&amp;height=300&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
 									frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a
 										href="https://www.maps.ie/coordinates.html">find my
-										coordinates</a></iframe>
-							</div><br/>
-							<div class="email list-styled">
-								<h5><i class="fas fa-at"></i> Email</h5>
-								<ul class="list-unstyled">
-									<li>anna.janiak@yahoo.pl</li>
-								</ul>
-							</div>
-							<div class="phone list-styled">
-								<h5><i class="fas fa-phone-volume"></i> Phone</h5>
-								<ul class="list-unstyled">
-									<li> +46 793360854</li>
-								</ul>
-							</div>
+										coordinates</a></iframe> -->
+
+						<div class="col-sm-6">
+							<iframe width="100%" height="320px;" frameborder="0" style="border:0"
+								src="https://maps.google.com/maps?width=500&amp;height=300&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
+								allowfullscreen></iframe>
 						</div>
+
+						<!-- </div><br/> -->
+
 						<div class="col-sm-6">
 							<div class="form-box">
 								<h1>Get in touch</h1>
 								<p>Drop me a message</p>
-								<hr>
-								<div class="social">
-									<ul class="list-inline list-unstyled">
-										<li class="list-inline-item">
-											<a href="https://www.linkedin.com/in/anna-j-605a40177/"
-												target="_blank"><i class="fab fa-linkedin-in"></i>
-											</a>
-										</li>
-										<li class="list-inline-item">
-											<a href="https://github.com/annaweronica?tab=repositories"
-												target="_blank"><i class="fab fa-github"></i>
-											</a>
-										</li>
-										<li class="list-inline-item">
-											<a href="https://www.meetup.com/members/276920213/"
-												target="_blank"><i class="fab fa-meetup"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
 								<hr>
 								<form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
 									<div class="form-group">
@@ -398,23 +383,57 @@
 					</div>
 				</div>
 			</section>
-
 		</div>
-
-
 
 	</div>
 	<!--FOOTER-->
 	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
 		<div class="container-fluid text-center">
-			<span class="download">
-            <small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
+			<div class="row">
+				<div class="col-sm-4 download">
+					<small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
 							<i class="fas fa-download"></i></a></small><br>
-                            </span>
-			<span class="copy-right">
+                            </div>
+
+
+					
+					<div class="col-sm-4 social">
+						<ul class="list-inline list-unstyled">
+							<li class="list-inline-item">
+								<a href="https://www.linkedin.com/in/anna-j-605a40177/"
+									target="_blank"><i class="fab fa-linkedin-in"></i>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://github.com/annaweronica?tab=repositories"
+									target="_blank"><i class="fab fa-github"></i>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://www.meetup.com/members/276920213/"
+									target="_blank"><i class="fab fa-meetup"></i>
+								</a>
+							</li>
+						</ul>
+					</div>
+<div class="col-sm-4 list-styled-contact">
+						<div class="email ">
+							<ul class="list-unstyled-contact">
+								<li> <i class="fas fa-at"></i> anna.janiak@yahoo.pl</li>
+								<li><i class="fas fa-phone"></i> +46 793360854</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<span class="copy-right">
 				<small>Copyright &copy; Anna Janiak</small>
                 </span>
-		</div>
+					</div>
+				</div>
+			</div>
+
 	</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -425,6 +444,9 @@
 	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+	</script>
+	<script>
+		$('body').scrollspy({ target: '#test-navbar' })
 	</script>
 </body>
 
