one video working

--- a/index.html
+++ b/index.html
@@ -224,15 +224,15 @@
 									<div><a href="https://www.scrum.org/" class="btn btn-outline-secondary"
 											target="_blank">Official website</a>
 										<!-- Button trigger modal -->
-										<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#staticBackdrop">Video</button>
+										<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#staticBackdropScrum">Video</button>
 
 										<!-- Modal -->
-										<div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1"
-											role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+										<div class="modal fade" id="staticBackdropScrum" data-backdrop="static" tabindex="-1"
+											role="dialog" aria-labelledby="staticBackdropScrumLabel" aria-hidden="true">
 											<div class="modal-dialog" role="document">
 												<div class="modal-content">
 													<div class="modal-header">
-														<h5 class="modal-title" id="staticBackdropLabel">Acceptance
+														<h5 class="modal-title" id="staticBackdropScrumLabel">Acceptance
 															crieria versus Definition of Done</h5>
 														<button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                         <span aria-hidden="true">&times;</span>
@@ -341,22 +341,11 @@
 			<section class="contact">
 				<div class="container">
 					<div class="row justify-content-center">
-						<!-- <div class="col-md-6"> -->
-						<!--GOOGLE MAP-->
-						<!-- <div class="contact-map" style="width: 500px"><iframe width="500" height="300"
-									src="https://maps.google.com/maps?width=500&amp;height=300&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
-									frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a
-										href="https://www.maps.ie/coordinates.html">find my
-										coordinates</a></iframe> -->
-
-						<div class="col-sm-6">
-							<iframe width="100%" height="320px;" frameborder="0" style="border:0"
-								src="https://maps.google.com/maps?width=500&amp;height=300&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
+						<div class="col-sm-6 contact-map">
+							<iframe width="100%" height="400px;" frameborder="0" style="border:0"
+								src="https://maps.google.com/maps?width=500&amp;height=400&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
 								allowfullscreen></iframe>
 						</div>
-
-						<!-- </div><br/> -->
-
 						<div class="col-sm-6">
 							<div class="form-box">
 								<h1>Get in touch</h1>
@@ -384,7 +373,6 @@
 				</div>
 			</section>
 		</div>
-
 	</div>
 	<!--FOOTER-->
 	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
@@ -394,9 +382,6 @@
 					<small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
 							<i class="fas fa-download"></i></a></small><br>
                             </div>
-
-
-					
 					<div class="col-sm-4 social">
 						<ul class="list-inline list-unstyled">
 							<li class="list-inline-item">
@@ -416,12 +401,15 @@
 							</li>
 						</ul>
 					</div>
-<div class="col-sm-4 list-styled-contact">
+					<div class="col-sm-4 contact-info">
+                    <div class="phone">
+                    	<p><i class="fas fa-phone"></i> +46 793360854</p>
+                    </div>
 						<div class="email ">
-							<ul class="list-unstyled-contact">
-								<li> <i class="fas fa-at"></i> anna.janiak@yahoo.pl</li>
-								<li><i class="fas fa-phone"></i> +46 793360854</li>
-							</ul>
+							<!-- <ul class="list-unstyled-contact"> -->
+								<p> <i class="fas fa-at"></i> anna.janiak@yahoo.pl</p>
+							
+							<!-- </ul> -->
 						</div>
 					</div>
 				</div>
