first video fixed

--- a/index.html
+++ b/index.html
@@ -285,9 +285,11 @@
                                                              </button>
 													</div>
 													<div class="modal-body">
-														<iframe id="staticBackdrop-iframe" width="420" height="345"
-															src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-                                                            https://www.youtube.com/embed/v=aW2m-BtCJyE&t=2s
+														<iframe id="staticBackdrop-iframe" width="560" height="315"
+															src="https://www.youtube.com/embed/aW2m-BtCJyE"
+															frameborder="0"
+															allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+															allowfullscreen></iframe>
 
 														<div class="modal-footer">
 															<button type="button" class="btn btn-outline-secondary close staticBackdrop-close" id="staticBackdrop-close" data-dismiss="modal">Close</button>
@@ -360,7 +362,7 @@
 									<h2>Get in touch</h2>
 									<hr>
 									<div class="col-sm-6 contact-info">
-                                    <button type="button" data-toggle="modal" data-target="#contact-model">Launch modal</button>
+										<button type="button" data-toggle="modal" data-target="#contact-model">Launch modal</button>
 
 										<div class="modal" tabindex="-1" role="dialog" id="contact-model">
 											<div class="modal-dialog" role="document">
