working on contact page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 	<header>
 		<nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark justify-content-right" id="test-navbar">
 			<a class="navbar-brand" href="index.html">Anna Janiak</a>
-			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
-                data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
-                aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 			<div class="collapse navbar-collapse text-right" id="navbarTogglerDemo02">
@@ -68,10 +66,10 @@
 					<div class="card card-content-top mb-4">
 						<!--Card content-->
 						<div class="card-body landing-content">
-							<p class="card-text">Before being bitten by the programming bug I had been
-								working within IT with requirements developing one of charts, maps & flight
-								planners in distributed awesome team for an large aviation company. Click: <a
-									href="https://ww2.jeppesen.com/" target="_blank"><i class="fas fa-plane"></i></a>
+							<p class="card-text">Before being bitten by the programming bug I had been working within IT
+								with requirements developing one of charts, maps & flight planners in distributed
+								awesome team for an large aviation company. Click: <a href="https://ww2.jeppesen.com/"
+									target="_blank"><i class="fas fa-plane"></i></a>
 							</p>
 						</div>
 					</div>
@@ -85,8 +83,10 @@
 								valuable is to get not only highly skilled but also suitably matched employees for an
 								organization. Click:
 								<a href="https://cpljobs.com/pl/?lang=en"
-									target="_blank"><i class="fas fa-user-friends"></i></a><br><br>
-							</p>
+									target="_blank"><i class="fas fa-user-friends"></i></a>
+								<br>
+								<br>
+                            </p>
 						</div>
 					</div>
 					<!-- /Card 3-->
@@ -95,10 +95,9 @@
 					<div class="card card-content-top mb-4">
 						<!--Card content-->
 						<div class="card-body landing-content">
-							<p class="card-text">TV News Media was an exciting experience. I thrived
-								coordinating TV crews as well as verifying and passing huge amount of information under
-								time pressure. I believe effective communication is a key success to every project.
-								Click:
+							<p class="card-text">TV News Media was an exciting experience. I thrived coordinating TV
+								crews as well as verifying and passing huge amount of information under time pressure. I
+								believe effective communication is a key success to every project. Click:
 								<a href="https://tvn24.pl/" target="_blank"><i class="fas fa-tv"></i></a>
 							</p>
 						</div>
@@ -123,8 +122,10 @@
 								<!--Title-->
 								<h4 class="card-title">FRONT END & TESTING</h4>
 								<!--Text-->
-								<p class="card-text">I am creative.<br>
-									<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.<br>I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
+								<p class="card-text">I am creative.
+									<br>
+									<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.
+									<br>I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
 									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
 									<a href="https://www.istqb.org/" class="btn btn-outline-secondary"
 										target="_blank">ISTQB</a>
@@ -149,7 +150,8 @@
 								<!--Title-->
 								<h4 class="card-title">BACK END & REQUIREMENTS</h4>
 								<!--Text-->
-								<p class="card-text">I am persistent.<br>
+								<p class="card-text">I am persistent.
+									<br>
 									<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
 									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
 									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
@@ -218,7 +220,8 @@
 								<h4 class="card-title">SCRUM & KANBAN</h4>
 								<!--Text-->
 								<p class="card-text">SCRUM MASTER
-									<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?</p>
+									<br>
+									<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?</p>
 									<div><a href="https://www.scrum.org/" class="btn btn-outline-secondary"
 											target="_blank">Official website</a>
 										<!-- Button trigger modal -->
@@ -235,7 +238,7 @@
 															overview
 														</h5>
 														<button type="button" class="close staticBackdrop-close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                                                             </button>
+                                                    </button>
 													</div>
 													<div class="modal-body">
 														<iframe id="staticBackdropScrum-iframe" width="560" height="315"
@@ -245,7 +248,7 @@
 															allowfullscreen></iframe>
 
 														<div class="modal-footer">
-															<button type="button" class="btn btn-outline-secondary close staticBackdrop-close" id="staticBackdrop-close" data-dismiss="modal">Close</button>
+															<button type="button" class="btn btn-outline-secondary close staticBackdropScrum-close" id="staticBackdropScrum-close" data-dismiss="modal">Close</button>
 														</div>
 													</div>
 												</div>
@@ -266,7 +269,8 @@
 								<h4 class="card-title">SAFe</h4>
 								<!--Text-->
 								<p class="card-text">proxy PRODUCT OWNER
-									<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?</p>
+									<br>
+									<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?</p>
 									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
 									<div><a href="https://www.scaledagileframework.com/"
 											class="btn btn-outline-secondary" target="_blank">Official website</a>
@@ -284,7 +288,7 @@
 															overview
 														</h5>
 														<button type="button" class="close staticBackdrop-close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                                                             </button>
+                                                    </button>
 													</div>
 													<div class="modal-body">
 														<iframe id="staticBackdrop-iframe" width="560" height="615"
@@ -346,113 +350,106 @@
 				<!--CONTACT FORM-->
 				<section class="contact">
 					<div class="container">
+
+						<div class="row">
+							<div class="form-box">
+								  <h2>Get in touch</h2>
+								<div class="col-sm-6 contact-info">
+                              
+									<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#contact-model1">Contact me!</button>
+									<div class="modal" tabindex="-1" role="dialog" id="contact-model1"
+										embed-responsive-16by9>
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+												</div>
+												<div class="modal-body contact-info">
+													<p><i class="fas fa-phone"></i> +46 793360854</p>
+													<hr>
+													<p><i class="fas fa-at"></i> anna.janiak@yahoo.pl</p>
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<button onclick=" window.open('assets/cv/cvAnnaJaniakJansson.pdf','_blank')" class="btn btn-outline-secondary">Download CV</button>
+								</div>
+							        </div>
+						</div>
 						<div class="row justify-content-center">
 							<div class="col-sm-6 contact-map">
 								<iframe class="embed-responsive-item"
 									src="https://maps.google.com/maps?width=500&amp;height=400&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
 									allowfullscreen></iframe>
 							</div>
+
+							<hr>
 							<div class="col-sm-6">
-								<div class="form-box">
-									<h2>Get in touch</h2>
-									<hr>
-									<div class="col-sm-6 contact-info">
-										<button type="button" data-toggle="modal" data-target="#contact-model">Launch modal</button>
-
-										<div class="modal" tabindex="-1" role="dialog" id="contact-model">
-											<div class="modal-dialog" role="document">
-												<div class="modal-content">
-													<div class="modal-header">
-														<h5 class="modal-title">Modal title</h5>
-														<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-													</div>
-													<div class="modal-body">
-														<p>Modal body text goes here.</p>
-													</div>
-													<div class="modal-footer">
-														<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-														<button type="button" class="btn btn-primary">Save changes</button>
-													</div>
-												</div>
-											</div>
-										</div>
-
-
-
-										<!-- <div class="phone">
-										<p><i class="fas fa-phone"></i> +46 793360854</p>
-									</div>
-									<div class="email "> -->
-										<!-- <ul class="list-unstyled-contact"> -->
-										<!-- <p> <i class="fas fa-at"></i> anna.janiak@yahoo.pl</p> -->
-
-										<!-- </ul> -->
-									</div>
-								</div>
-								<p>Drop me a message</p>
-								<hr>
+								<h4>Drop me a message</h4>
 								<form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
 									<div class="form-group">
 										<label for="name">Name</label>
 										<input class="form-control" id="name" type="text" name="Name" required="required">
-    </div>
+                                        </div>
 										<div class="form-group">
 											<label for="email">Email</label>
 											<input class="form-control" id="email" type="email" name="Email" required="required">
-    </div>
+                                        </div>
 											<div class="form-group">
 												<label for="message">Message</label>
 												<textarea class="form-control" id="message" name="Message"></textarea>
 											</div>
-											<input class="btn btn-outline-secondary" type="submit" value="Submit"/>
+											<input class="btn btn-outline-secondary" type="submit" value="Submit" />
 
-										</form>
+                                    </form>
 										</div>
 									</div>
-							</div>
 
+							</div>
+</div>
 				</section>
 			</div>
 		</div>
 		<!--FOOTER-->
-		<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+		<footer id="sticky-footer" class="py-2 bg-dark text-white-50">
 			<div class="container-fluid text-center">
 				<div class="row">
-					<div class="col-sm-4 download">
-						<small><a href="assets/cv/cvAnnaJaniakJansson.pdf" target="_blank"> Download CV.pdf
-							<i class="fas fa-download"></i></a></small><br>
-                            </div>
-						<div class="col-sm-4 social">
-							<ul class="list-inline list-unstyled">
-								<li class="list-inline-item">
-									<a href="https://www.linkedin.com/in/anna-j-605a40177/"
-										target="_blank"><i class="fab fa-linkedin-in"></i>
-									</a>
-								</li>
-								<li class="list-inline-item">
-									<a href="https://github.com/annaweronica?tab=repositories"
-										target="_blank"><i class="fab fa-github"></i>
-									</a>
-								</li>
-								<li class="list-inline-item">
-									<a href="https://www.meetup.com/members/276920213/"
-										target="_blank"><i class="fab fa-meetup"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-
+					<div class="col-sm-12 social">
+						<ul class="list-inline list-unstyled">
+							<li class="list-inline-item">
+								<a href="https://www.linkedin.com/in/anna-j-605a40177/"
+									target="_blank"><i class="fab fa-linkedin-in"></i>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://github.com/annaweronica?tab=repositories"
+									target="_blank"><i class="fab fa-github"></i>
+								</a>
+							</li>
+							<li class="list-inline-item">
+								<a href="https://www.meetup.com/members/276920213/"
+									target="_blank"><i class="fab fa-meetup"></i>
+								</a>
+							</li>
+						</ul>
 					</div>
-					<div class="row">
-						<div class="col-sm-12">
-							<span class="copy-right">
+
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<span class="copy-right">
 				<small>Copyright &copy; Anna Janiak</small>
                 </span>
-						</div>
 					</div>
 				</div>
+			</div>
 
 		</footer>
 	</div>
@@ -466,7 +463,9 @@
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
 	<script>
-		$('body').scrollspy({ target: '#test-navbar' })
+		$('body').scrollspy({
+            target: '#test-navbar'
+        })
 	</script>
 	<!-- <script type="text/javascript">
 		$('#staticBackdrop').on('hidden.bs.modal', function () {
@@ -476,15 +475,15 @@
 
 	<script>
 		// Credit: https://stackoverflow.com/questions/13598423/stop-all-playing-iframe-videos-on-click-a-link-javascript
-        $(function(){
-            $('.staticBackdrop-close').click(function(){      
+        $(function() {
+            $('.staticBackdrop-close').click(function() {
                 $('#staticBackdrop-iframe').attr('src', $('#staticBackdrop-iframe').attr('src'));
             });
         });
 	</script>
 	<script>
-		$(function(){
-            $('.staticBackdropScrum-close').click(function(){      
+		$(function() {
+            $('.staticBackdropScrum-close').click(function() {
                 $('#staticBackdropScrum-iframe').attr('src', $('#staticBackdropScrum-iframe').attr('src'));
             });
         });
