maina page buttons fixed

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="card-body landing-content">
 							<p class="card-text">Before being bitten by the programming bug I had been working within IT
 								with requirements developing one of charts, maps & flight planners in distributed
-								awesome team for an large aviation company. Click: <a href="https://ww2.jeppesen.com/"
+								awesome team for an large aviation company. <a href="https://ww2.jeppesen.com/" class="btn btn-outline-secondary"
 									target="_blank"><i class="fas fa-plane"></i></a>
 							</p>
 						</div>
@@ -81,8 +81,8 @@
 						<div class="card-body landing-content">
 							<p class="card-text">Experience in Human Resources gave me wide business perspective on how
 								valuable is to get not only highly skilled but also suitably matched employees for an
-								organization. Click:
-								<a href="https://cpljobs.com/pl/?lang=en"
+								organization. 
+								<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-outline-secondary"
 									target="_blank"><i class="fas fa-user-friends"></i></a>
 								<br>
 								<br>
@@ -97,8 +97,8 @@
 						<div class="card-body landing-content">
 							<p class="card-text">TV News Media was an exciting experience. I thrived coordinating TV
 								crews as well as verifying and passing huge amount of information under time pressure. I
-								believe effective communication is a key success to every project. Click:
-								<a href="https://tvn24.pl/" target="_blank"><i class="fas fa-tv"></i></a>
+								believe effective communication is a key success! 
+								<a href="https://tvn24.pl/" class="btn btn-outline-secondary" target="_blank"><i class="fas fa-tv"></i></a>
 							</p>
 						</div>
 					</div>
